<resources>
<string name="ShareMessage">"Check out this beautiful app to customize your Power Menu of your rooted android device!"</string>
<string name="PreviewPowerMenu">"Preview"</string>
<string name="powerMenuMain_Shutdown">"Power Off"</string>
<string name="powerMenuMain_Reboot">"Reboot"</string>
<string name="powerMenuMain_SoftReboot">"Soft Reboot"</string>
<string name="powerMenuMain_SoftRebootDesc">"Simply restarts the Android UI by killing the zygote process"</string>
<string name="powerMenuMain_Screenshot">"Screenshot"</string>
<string name="powerMenuMain_ScreenshotDesc">"Screenshot delay: [SCREENSHOTDELAY]"</string>
<string name="powerMenuBottom_Recovery">"Recovery"</string>
<string name="powerMenuBottom_Bootloader">"Bootloader"</string>
<string name="powerMenuBottom_SafeMode">"Safe Mode"</string>
<string name="powerMenu_Shuttingdown">"Shutting down..."</string>
<string name="powerMenu_Rebooting">"Rebooting..."</string>
<string name="powerMenuMain_KillApp">"Kill foreground app"</string>
<string name="powerMenuMain_AppShortcut">"App shortcut"</string>
<string name="powerMenuMain_ActivityShortcut">"Activity shortcut"</string>
<string name="powerMenuMain_ToggleRotate">"Screen rotation"</string>
<string name="ToggleRotateMode_Auto">"Auto"</string>
<string name="ToggleRotateMode_Off">"Off"</string>
<string name="powerMenuMain_ToggleWifi">"WiFi"</string>
<string name="powerMenuMain_ToggleBluetooth">"Bluetooth"</string>
<string name="powerMenuMain_ToggleData">"Data"</string>
<string name="powerMenuMain_RebootFlashMode">"Flashmode"</string>
<string name="visibilityOrderCategory_VisibilityOrder">"Visibility and order"</string>
<string name="category_Preset">"Presets"</string>
<string name="preset_Load">"Load preset"</string>
<string name="preset_LoadDesc">"Load a saved configuration"</string>
<string name="preset_Save">"Save preset"</string>
<string name="preset_SaveDesc">"Save your current configuration"</string>
<string name="presetsManager_TitleLocal">"Local Presets"</string>
<string name="presetsManager_TitleOnline">"Online Presets"</string>
<string name="presetsManager_Creator">"Creator: [CREATORNAME]"</string>
<string name="presetsManager_BuiltIn">"Built-in"</string>
<string name="presetsManager_SureToDelete">"Are you sure you want to delete [PRESETNAME]?\nThis can't be undone!"</string>
<string name="presetsManager_ImportMsg">"Would you like to import this preset?"</string>
<string name="presetsManager_ImportSuccess">"[PRESETNAME] imported successfully."</string>
<string name="presetsManager_ImportFailed">"Import failed..."</string>
<string name="advancedPrefsCategory_PowerMenu">"Power Menu"</string>
<string name="advancedPrefsTitle_UseGraphics">"Use Graphics"</string>
<string name="advancedPrefsDesc_UseGraphics">"Use Graphics instead of the Letter circles."</string>
<string name="advancedPrefsCategory_LockScreen">"Lockscreen"</string>
<string name="advancedPrefsTitle_ShowOnLockScreen">"Show on lockscreen"</string>
<string name="advancedPrefsDesc_ShowOnLockScreen">"Show the Power Menu on the lockscreen, when disabled nothing will show."</string>
<string name="advancedPrefsCategory_Delays">"Delays"</string>
<string name="advancedPrefs_DelayZero">"Almost instant"</string>
<string name="advancedPrefsTitle_ScreenshotDelay">"Screenshot delay"</string>
<string name="advancedPrefsDesc_ScreenshotDelay">"Delay between click and screenshot."</string>
<string name="Dialog_SelectColor">"Select color"</string>
<string name="ColorPicker_Value">"Value:"</string>
<string name="ColorPicker_Saturation">"Saturation:"</string>
<string name="ColorPicker_Opacity">"Opacity:"</string>
<string name="ColorPicker_Hex">"Hex:"</string>
<string name="presetLoad_PresetDeleted">"Deleted [PRESETNAME]!"</string>
<string name="presetLoad_PresetLoaded">"Loaded [PRESETNAME]!"</string>
<string name="presetSaveDialog_CreatorNameInfo">"This preset was created by:"</string>
<string name="presetSaveDialog_InfoText">"Set a name for the preset:"</string>
<string name="presetSaveDialog_OverwriteText">"Already existing, preset will be overwritten!"</string>
<string name="presetSave_PresetSaved">"Saved [PRESETNAME]!"</string>
<string name="powerMenuMain_Screenrecord">"Screenrecord"</string>
<string name="screenrecord_notif_ticker">"Screen is being recorded"</string>
<string name="screenrecord_notif_title">"Screen recording"</string>
<string name="screenrecord_toast_error">"Unable to record screen"</string>
<string name="screenrecord_toast_processing">"Cannot start new recording as previous recording is still being processed"</string>
<string name="screenrecord_toast_saved">"Recording saved as %s"</string>
<string name="screenrecord_toast_save_error">"Unable to save recording to output file"</string>
<string name="powerMenuMain_FlashlightOff">"Turn torch off"</string>
<string name="powerMenuMain_FlashlightDesc">"Turning off after [AUTOOFF]."</string>
<string name="powerMenuMain_FlashlightDescDisabled">"Automatic turn off disabled."</string>
<string name="powerMenuMain_ExpandedDesktop">"Expanded Desktop"</string>
<string name="advancedPrefsTitle_DialogGravity">"Dialog Position"</string>
<string name="advancedPrefsDesc_DialogGravity">"Change the dialog position."</string>
<string name="quick_settings_torch_on">"Torch On"</string>
<string name="quick_settings_torch_off">"Torch Off"</string>
<string name="quick_settings_torch_off_notif">"Touch to turn off"</string>
<string name="powerMenuMain_AirplaneMode">"Airplane Mode"</string>
<string name="powerMenuMain_RestartUI">"Restart System UI"</string>
<string name="colorsType_Reveal">"Reveal color"</string>
<string name="colorsType_Circle">"Circle color"</string>
<string name="colorsType_Background">"Background color"</string>
<string name="colorsType_Text">"Text color"</string>
<string name="powerMenuMain_Flashlight">"Torch"</string>
<string name="permissionsScreen_Title">"Permissions"</string>
<string name="permissionsScreen_NotAllGranted">"Not all permissions are granted, some functions may not work..."</string>
<string name="permissionsScreen_ClickToRequest">"Click to request the permission."</string>
<string name="permissionsScreen_DontAskAgain">"Don't ask again"</string>
<string name="permissionsScreenTitle_android.permission.WRITE_EXTERNAL_STORAGE">"Read/Write External Storage"</string>
<string name="permissionsScreenDesc_android.permission.WRITE_EXTERNAL_STORAGE">"Required to use custom graphics."</string>
<string name="permissionsScreenTitle_android.permission.CAMERA">"Camera"</string>
<string name="permissionsScreenDesc_android.permission.CAMERA">"Required to toggle the torch."</string>
<string name="visibilityOrder_HideDesc">"Hide description"</string>
<string name="permissionsScreenTitle_android.permission.ACCESS_SURFACE_FLINGER">"Access Surface Flinger"</string>
<string name="permissionsScreenDesc_android.permission.ACCESS_SURFACE_FLINGER">"Required for the screen recorder to record the screen."</string>
<string name="permissionsScreenTitle_android.permission.RECORD_AUDIO">"Record Audio"</string>
<string name="permissionsScreenDesc_android.permission.RECORD_AUDIO">"Required to record audio with the screen recorder."</string>
<string name="permissionsScreenTitle_android.permission.SYSTEM_ALERT_WINDOW">"System Alert window"</string>
<string name="permissionsScreenDesc_android.permission.SYSTEM_ALERT_WINDOW">"Required to display the Power Menu on top of everything."</string>
<string name="permissionsScreenTitle_android.permission.WAKE_LOCK">"Wake Lock"</string>
<string name="permissionsScreenDesc_android.permission.WAKE_LOCK">"Required to prevent killing of the torch and screenrecord service."</string>
<string name="permissionsScreenTitle_android.permission.ACCESS_WIFI_STATE">"Access WiFi State"</string>
<string name="permissionsScreenDesc_android.permission.ACCESS_WIFI_STATE">"Required to get the WiFi state."</string>
<string name="permissionsScreenTitle_android.permission.CHANGE_WIFI_STATE">"Change WiFi State"</string>
<string name="permissionsScreenDesc_android.permission.CHANGE_WIFI_STATE">"Required to toggle WiFi."</string>
<string name="permissionsScreenTitle_android.permission.BLUETOOTH">"Bluetooth"</string>
<string name="permissionsScreenDesc_android.permission.BLUETOOTH">"Required to get the bluetooth state."</string>
<string name="permissionsScreenTitle_android.permission.BLUETOOTH_ADMIN">"Bluetooth Admin"</string>
<string name="permissionsScreenDesc_android.permission.BLUETOOTH_ADMIN">"Required to toggle bluetooth without any dialog."</string>
<string name="powerMenuMain_SoundMode">"Sound Mode"</string>
<string name="powerMenuMain_SoundModeDesc">"Current mode: [SOUNDMODE]"</string>
<string name="SoundMode_Normal">"Normal"</string>
<string name="SoundMode_Vibrate">"Vibrate"</string>
<string name="SoundMode_Silent">"Silent"</string>
<string name="presetsManager_TitleAccount">"Account"</string>
<string name="presetsManager_UploadMsg">"This Preset will be uploaded to the public server, visible to all other users.\n\nThis is your last chance to adjust the name or the creator before uploading..."</string>
<string name="presetsManager_UploadComplete">"Upload complete!"</string>
<string name="presetsManager_UploadFailedSameName">"This name is already in use, please choose another one."</string>
<string name="presetsManager_UploadFailedNoAccess">"This creator name is protected, choose another one or log in."</string>
<string name="presetsManager_UploadFailed">"Upload failed!"</string>
<string name="presetsManager_DownloadFailed">"Download failed!"</string>
<string name="presetsManager_CantConnecttoServer">"Can't connect to the server!\nPlease check your network connection or try again later."</string>
<string name="login_Info">"The user names of registered users are protected so no one can upload in their name, here you can log in or create an new account.\nThis is not required if you don't want to!\nI will never share any private data!"</string>
<string name="login_UsernameEmail">"Username or E-mail:"</string>
<string name="login_Username">"Username:"</string>
<string name="login_Email">"E-mail:"</string>
<string name="login_RetypeEmail">"Repeat E-mail:"</string>
<string name="login_PasswordOverEmail">"You can set your password via the link in the activation E-mail (the E-mail is only available in English)."</string>
<string name="login_Password">"Password:"</string>
<string name="login_KeepLogin">"Keep me logged in."</string>
<string name="login_Register">"Need an account?\nClick here to create a new account!"</string>
<string name="login_Processing">"Processing..."</string>
<string name="login_TitleStatistics">"Statistics for [USERNAMEEMAIL]"</string>
<string name="login_Statistics">"Presets uploaded: [UPLOADCOUNT]\n\nStars given: [STARSGIVEN]\nStars received: [STARSRECEIVED]\n\nYour presets (ordered by stars):\n[TOP5PRESETS]"</string>
<string name="login_ReloadStatistics">"Click here to reload statistics"</string>
<string name="login_RecoverAccount">"Can't access your account?\nClick here for recovering options."</string>
<string name="login_RecoverPassword">"Reset Password"</string>
<string name="backupRestoreCategory_BackupRestore">"Backup and restore"</string>
<string name="backupRestore_NewBackupTitle">"Backup all settings"</string>
<string name="backupRestore_NewBackupDesc">"Click here to save all settings to the local storage root."</string>
<string name="backupRestore_RestoreTitle">"Restore settings"</string>
<string name="backupRestore_RestoreDesc">"Click here to restore saved settings."</string>
<string name="backupRestoreCategory_Delete">"Delete"</string>
<string name="backupRestore_DeleteSettingsTitle">"Delete settings"</string>
<string name="backupRestore_DeleteSettingsDesc">"Click here to get a dialog with settings you could reset, Use this if something somehow destroyed some settings and the app keeps crashing when entering the corresponding screen."</string>
</resources>