<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:layout_margin="5dp"
		android:padding="5dp">

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="match_parent"
		android:text="@string/presetSaveDialog_InfoText"
		android:gravity="center_vertical"/>

	<EditText
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:ems="10"
		android:maxLines="1"
		android:singleLine="true"
			android:id="@+id/inputdialogEditText1"/>

	<TextView
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:text="@string/presetSaveDialog_CreatorNameInfo"
			android:gravity="center_vertical"/>

	<EditText
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:ems="10"
			android:maxLines="1"
			android:singleLine="true"
			android:id="@+id/inputdialogEditText2"/>

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="match_parent"
		android:text="@string/presetSaveDialog_OverwriteText"
		android:visibility="gone"
		android:gravity="center_horizontal"
		android:id="@+id/inputdialogTextViewOverwrite"/>

</LinearLayout>

