<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/window_background_dark">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/transparent"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/backupRestoreCategory_BackupRestore"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

                <TextView
                    android:layout_height="2dp"
                    android:layout_width="match_parent"
                    android:background="@color/colorAccentDarkTheme"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:alpha="0.5"
                    android:minWidth="200dp"/>

            </LinearLayout>

            <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/activitybackuprestoreLinearLayout_NewBackup">

            <LinearLayout
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/backupRestore_NewBackupTitle"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/backupRestore_NewBackupDesc"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"/>

            </LinearLayout>

            <TextView
                android:layout_height="2dp"
                android:layout_width="match_parent"
                android:background="@color/colorAccentDarkTheme"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:alpha="0.3"/>

        </LinearLayout>

            <LinearLayout
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:id="@+id/activitybackuprestoreLinearLayout_Restore">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/backupRestore_RestoreTitle"
                        android:layout_weight="1.0"
                        android:gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/backupRestore_RestoreDesc"
                        android:layout_weight="1.0"
                        android:gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp"/>

                </LinearLayout>

                <TextView
                    android:layout_height="2dp"
                    android:layout_width="match_parent"
                    android:background="@color/colorAccentDarkTheme"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:alpha="0.3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/backupRestoreCategory_Delete"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

                <TextView
                    android:layout_height="2dp"
                    android:layout_width="match_parent"
                    android:background="@color/colorAccentDarkTheme"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:alpha="0.5"
                    android:minWidth="200dp"/>

            </LinearLayout>

            <LinearLayout
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:id="@+id/activitybackuprestoreLinearLayout_Delete">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/backupRestore_DeleteSettingsTitle"
                        android:layout_weight="1.0"
                        android:gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/backupRestore_DeleteSettingsDesc"
                        android:layout_weight="1.0"
                        android:gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp"/>

                </LinearLayout>

                <TextView
                    android:layout_height="2dp"
                    android:layout_width="match_parent"
                    android:background="@color/colorAccentDarkTheme"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:alpha="0.3"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#CC000000"
        android:visibility="visible"
        android:id="@+id/activitybackuprestoreRelativeLayout_Progress">

        <ProgressBar
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/activitybackuprestoreProgressBar1"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login_Processing"
            android:textColor="#FFFFFF"
            android:gravity="center|center_vertical|center_horizontal"
            android:layout_centerInParent="true"
            android:layout_below="@id/activitybackuprestoreProgressBar1"/>

    </RelativeLayout>

</RelativeLayout>